adding output files

--- a/Affirm.Challenge.LoanBalance.Startup/Affirm.Challenge.LoanBalance.Startup.csproj
+++ b/Affirm.Challenge.LoanBalance.Startup/Affirm.Challenge.LoanBalance.Startup.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Affirm.Challenge.LoanBalance\Affirm.Challenge.LoanBalance.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="output\small\" />
+  </ItemGroup>
+
 </Project>
